--- a/tw_embed_invisible.css
+++ b/tw_embed_invisible.css
@@ -4,10 +4,23 @@ div[data-testid="retweet"] span,
 div[data-testid="unretweet"] span,
 div[data-testid="like"] span,
 div[data-testid="unlike"] span,
-div[data-testid="primaryColumn"] div[data-testid="UserCell"],
-div[data-testid="sidebarColumn"] div[data-testid="UserCell"],
-div[data-testid="sidebarColumn"] [role="region"],
-a[aria-label="ツイートアクティビティを表示"]
+a[href$="/following"],
+a[href$="/followers"],
+a[href$="/retweets"],
+a[href$="/likes"],
+:not([aria-modal="true"]) [data-testid="UserCell"]
 {
+    display: none;
+}
+
+[aria-modal="true"] [data-testid="UserCell"]
+{
+    display: block;
+}
+
+.reply-count,
+.retweet-count,
+.like-count,
+.prf-stats{
     display: none;
 }
