fix: showed user switcher

--- a/tw_embed_invisible.css
+++ b/tw_embed_invisible.css
@@ -13,7 +13,8 @@ a[href$="/likes"],
     display: none;
 }
 
-[aria-modal="true"] [data-testid="UserCell"]
+[aria-modal="true"] [data-testid="UserCell"],
+[role="group"] [data-testid="UserCell"]
 {
     display: block;
 }
