twitter 仕様変更対応

--- a/tw_embed_invisible.css
+++ b/tw_embed_invisible.css
@@ -4,8 +4,10 @@ div[data-testid="retweet"] span,
 div[data-testid="unretweet"] span,
 div[data-testid="like"] span,
 div[data-testid="unlike"] span,
+div[data-testid="bookmark"] span,
 a[href$="/following"],
 a[href$="/followers"],
+a[href$="/verified_followers"],
 a[href$="/retweets"],
 a[href$="/likes"],
 a[href$="/analytics"] span,
