--- a/tw_embed_invisible.css
+++ b/tw_embed_invisible.css
@@ -1,10 +1,10 @@
 div[data-testid="tweet"]+div a[dir="auto"]:not([aria-label]),
-div[data-testid="reply"] span,
-div[data-testid="retweet"] span,
-div[data-testid="unretweet"] span,
-div[data-testid="like"] span,
-div[data-testid="unlike"] span,
-div[data-testid="bookmark"] span,
+[data-testid="reply"] > div > div:nth-child(2),
+[data-testid="retweet"] > div > div:nth-child(2),
+[data-testid="unretweet"] > div > div:nth-child(2),
+[data-testid="like"] > div > div:nth-child(2),
+[data-testid="unlike"] > div > div:nth-child(2),
+[data-testid="bookmark"] span,
 a[href$="/following"],
 a[href$="/followers"],
 a[href$="/verified_followers"],
